<resources>
    <string name="app_name">We-Sync</string>
    <string name="next">Next</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sub">SubActivity</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="start_new">New</string>
    <string name="brush">Brush</string>
    <string name="erase">Erase</string>
    <string name="save">Save</string>
    <string name="paint">Paint</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>

    <string name="user_successfully_added">User successfully added!</string>
    <string name="user_unable_to_add">Unable to add user!</string>


    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in We-Sync now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string-array name="tabs">
        <item>TAB 1</item>
        <item>TAB 2</item>
        <item>TAB 3</item>
        <item>TAB 4</item>
        <item>TAB 5</item>
        <item>TAB 6</item>
    </string-array>

    <string name="title_activity_activity_using_tab_library">ActivityUsingTabLibrary</string>
    <string name="action_tabs_using_library">Tabs With Library</string>
    <string name="loading">loading...</string>
    <string name="please_wait">please wait...</string>
</resources>
