<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_touch_intercept_activity"
        android:icon="@mipmap/ic_next"
        android:orderInCategory="100"
        android:title="@string/next"
        app:showAsAction="always" />
    <item
        android:id="@+id/sketch"
        android:orderInCategory="200"
        android:title="Sketch Pad"
        app:showAsAction="never" />
    <item
        android:id="@+id/sign_out"
        android:orderInCategory="200"
        android:title="@string/btn_sign_out"
        app:showAsAction="never" />

</menu>