<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="horizontal" >
    <ImageButton
        android:id="@+id/small_brush"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:contentDescription="@string/small"
        android:background="#FFFFFFFF"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:src="@drawable/small" />

    <ImageButton
        android:id="@+id/medium_brush"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="#FFFFFFFF"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:contentDescription="@string/medium"
        android:src="@drawable/medium" />

    <ImageButton
        android:id="@+id/large_brush"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFFFFFFF"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_weight="1"
        android:contentDescription="@string/large"
        android:src="@drawable/large" />


</LinearLayout>